@@ -3,17 +3,17 @@
 <addon
   id="repository.bossanova808"
   name="bossanova808's XBMC Addons"
-  version="0.0.9"
+  version="0.1"
   provider-name="bossanova808 [bossanova808@gmail.com]">
 	<extension point="xbmc.addon.repository"
              name="bossanova808's XBMC Addon Repository">
-    <info compressed="true">http://bossanova808-xbmc-addons.googlecode.com/git/addons.xml</info>
-    <checksum>http://bossanova808-xbmc-addons.googlecode.com/git/addons.xml.md5</checksum>
+    <info compressed="true">http://bossanova808-xbmc-addons.googlecode.com/git/staging/addons.xml</info>
+    <checksum>http://bossanova808-xbmc-addons.googlecode.com/git/staging/addons.xml.md5</checksum>
     <datadir zip="true">http://bossanova808-xbmc-addons.googlecode.com/git/repository-downloads/</datadir>
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<summary>Repo for Bossanova808's XBMC Addons</summary>
-		<description>Download and install addons by bossanova808.  These include alpha/beta/development versions of OzWeather and XSqueeze.</description>
+		<description>Download and install addons by bossanova808, including XSqueeze.</description>
 		<platform>all</platform>
 	</extension>
 </addon>
