@@ -1,6 +1,9 @@
+[B]Version 0.1[/B]
+- XSqueeze back into this repo as binaries are required so teh xbmc devs won't let into master repo
+- Back to old diretcory structure
+
 [B]Version 0.0.8[/B]
 - OzWeather and XSqueeze move to own googlecode repos for easier inclusion into XBMS master repo
-- this repo is now only for development versions/private use
 
 [B]Version 0.0.8[/B]
 - Added reference to XSqueeze
